--- a/.env.dev
+++ b/.env.dev
@@ -1,8 +1,16 @@
-POSTGRES_HOST=localhost
-POSTGRES_USER=developer
-POSTGRES_PASSWORD=51b6771f5256
+POSTGRES_HOST=db
 DBPORT=5432
-POSTGRES_DATABASE=aloc_people
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=admin
+POSTGRES_DB=app_people
+
 ## https://stackoverflow.com/questions/34902378/where-do-i-get-secret-key-for-flask
 SECRET_KEY=\xf1\x81*\xbd(%\xcd\xb2\x84\xa7\xb6\x83\xf3 \xd7\n\xb0H\xb0\xcc,\x81\x96x\xa1i.\xb3#\xccycZ\x19`\xc7
 RUN_MODE=dev
+
+
+URL_PROTOCOL=http://
+URL_BASE=192.168.26.91:
+API_VERSION=/api/v1
+VERSION=1.0
+URL_MS=/people
